--- a/css.css
+++ b/css.css
@@ -33,7 +33,7 @@ li{
    width: 100%;
    
    padding: 1px;
-   background-image: url('bg15.jpg') ;
+   background-image: url('images/bg15.jpg') ;
    background-position: 100%;
    background-size: cover;
   
