--- a/css.css
+++ b/css.css
@@ -34,7 +34,7 @@ li{
    
    padding: 1px;
    background-image: url('images/bg15.jpg') ;
-   background-position: 100vh;
+   background-position:100%;
    background-size: cover;
   
    height: max-content;
